--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h1>FORM-BUILDER</h1>
+<h1 style="text-align: center;">FORM-BUILDER</h1>
 <app-form-builder></app-form-builder>
 <!-- <router-outlet></router-outlet> -->
+<app-table-build></app-table-build>
 
